[package]
name = "web-thingy"
version = "0.1.0"
authors = ["David Dubois <dexcelstraun7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
oxide-auth = { version = "0.4.5", features = ["rocket-frontend"], default-features = false }
